--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "try-skeleton",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "main": "index.js",
   "repository": "https://github.com/TrySkeleton/Skeleton",
   "author": "TrySkeleton",
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "html2plaintext": "^2.1.0",
     "mysql": "^2.16.0",
     "skeleton-admin": "^0.0.5"
   },
