--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "try-skeleton",
-  "version": "0.0.43",
+  "version": "0.0.44",
   "main": "index.js",
   "repository": "https://github.com/TrySkeleton/Skeleton",
   "author": "TrySkeleton",
@@ -11,11 +11,15 @@
     "install": ""
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.3.4",
     "cors": "^2.8.5",
     "diff-match-patch": "^1.0.4",
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
     "html2plaintext": "^2.1.0",
     "moment": "^2.23.0",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "skeleton-admin": "^0.0.9"
   },
