--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
     "html2plaintext": "^2.1.0",
+    "http-errors": "^1.7.1",
+    "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
