--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "try-skeleton",
-  "version": "0.0.59",
+  "version": "0.0.60",
   "main": "index.js",
   "repository": "https://github.com/TrySkeleton/Skeleton",
   "author": "TrySkeleton",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^2.3.4",
+    "bcrypt": "^3.0.4",
     "cors": "^2.8.5",
     "diff-match-patch": "^1.0.4",
     "express": "^4.16.4",
@@ -19,11 +20,11 @@
     "graphql": "^14.0.2",
     "html2plaintext": "^2.1.0",
     "http-errors": "^1.7.1",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.0",
     "moment": "^2.23.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
-    "skeleton-admin": "^0.0.14"
+    "skeleton-admin": "^0.0.15"
   },
   "devDependencies": {
     "errorhandler": "^1.5.0",
